# career-ai

./: .env  .gitignore  Dockerfile  README.md  data_generation.py  datagen.py  docker-compose.yaml  pyproject.toml  skill_matching.py
app/core/: config.py
back/: README.md  pyproject.toml  test_smart_endpoints.py
back/app/: main.py
back/app/api/v1/routers/: assessment.py  candidates.py  employees.py  positions.py  smart.py  structured_employees.py
back/app/core/: config.py
back/app/models/: Employee.py  Position.py  Skill.py
back/app/services/: ai_service.py  assessment.py  ingestion.py  matching.py  supabase_client.py  vectorization.py
back/app/vector_db/: client.py
back/data/: assessment_results.json  mock_matching_jobs.json  mock_user_profile.json
back/initial_code/: datagen.py
client/: README.md  index.html  package-lock.json  package.json
data_generation/: employees_generation.py  employees_rows.csv  employees_rows_UPDATED_COLUMNS_FILTERED.csv  expanded_employees_langchain.csv  expanded_employees_langchain_deduped.csv  expanded_structured_employees_rows_FIXED.csv  positions_rows.csv  positions_subprofiles.csv  profiles_skills_position_plus_profile.csv  profiles_with_levels_and_descriptions_renamed.csv  profiles_with_skills_detailed.csv  skills_rows.csv  structured_employees_rows.csv  structured_employees_rows_FIXED.csv  structured_employees_rows_OUT.csv  update_chosen_employees_embeddings.py
front/: angular.json  package-lock.json  package.json
initial_code/: datagen.py  mermaid diagram code.mmd  skill_matching.py
tests/: data_generation.py
(+105 files in other folders)
