[project]
name = "career-ai"
version = "1.0.0"
description = "Intelligent backend service for managing positions, candidates, and skills using vector embeddings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.42",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
pythonpath = "."